--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* auth-source.el: Fix comment-style to follow the convention.
+
 2012-05-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-msg.el (gnus-msg-mail): Ensure that gnus-newsgroup-name is
