--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-01  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* xfns.c (x_set_tool_bar_lines) [USE_GTK]: Adjust to bitfield change.
+
 2012-06-01  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	For a 'struct window', replace some Lisp_Object fields to
