--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-06-02  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* sysdep.c (system_process_attributes) [SOLARIS2 && HAVE_PROCFS]:
+	Convert pctcpu and pctmem to Lisp float properly.
+	Let the compiler fold better, as 100.0/0x8000 is exact.
+
 2012-06-02  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* alloc.c (CONS_BLOCK_SIZE): Account for padding at the end of
