* lisp/simple.el (execute-extended-command): Set real-this-command. * src/keyboard.c: Export real-this-command to Elisp. (syms_of_keyboard): Rename real_this_command to Vreal_this_command and DEFVAR it.  Update all users.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-02  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* simple.el (execute-extended-command): Set real-this-command
+	(bug#11506).
+
 2012-06-02  Chong Yidong  <cyd@gnu.org>
 
 	Remove incorrect uses of "modeline" in comments, docstrings, and
