Implement default help-echo for mode line.
* lisp/bindings.el: Remove explicit help-echo from format-mode-line.
(mode-line-front-space, mode-line-end-spaces)
(mode-line-misc-info): New variables.
(mode-line-modes, mode-line-position): Move the default value to
the variable definition.
(mode-line-default-help-echo): New defcustom.

* src/buffer.c (buffer_local_value_1): New function, split from
Fbuffer_local_value; can return Qunbound.
(Fbuffer_local_value): Use it.
(Vmode_line_format): Docstring tweaks.

* src/xdisp.c (calc_pixel_width_or_height): Use Fbuffer_local_value.
(note_mode_line_or_margin_highlight): If there is no help echo,
use mode-line-default-help-echo.  Handle the case where the mouse
position is past the end of the mode line string.

* doc/lispref/modes.texi (Mode Line Data): Use "mode line construct"
terminology for consistency.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,13 @@
+2012-06-03  Chong Yidong  <cyd@gnu.org>
+
+	* bindings.el: Remove explicit help text from format-mode-line.
+	It is now supplied by mode-line-default-help-echo.
+	(mode-line-front-space, mode-line-end-spaces)
+	(mode-line-misc-info): New variables.
+	(mode-line-modes, mode-line-position): Move the default value to
+	the variable definition.
+	(mode-line-default-help-echo): New defcustom.
+
 2012-06-02  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* simple.el (execute-extended-command): Set real-this-command
