--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-03  Chong Yidong  <cyd@gnu.org>
+
+	* modes.texi (Mode Line Data): Use "mode line construct"
+	terminology for consistency.
+
 2012-05-27  Glenn Morris  <rgm@gnu.org>
 
 	* abbrevs.texi, advice.texi, anti.texi, backups.texi:
