Fix legibility of compilation mode-line messages.
* lisp/progmodes/compile.el (compilation-mode-line-fail)
(compilation-mode-line-run, compilation-mode-line-exit): New
faces.
(compilation-start, compilation-handle-exit): Use them.

* etc/themes/wheatgrass-theme.el:
* etc/themes/deeper-blue-theme.el:
* etc/themes/tango-dark-theme.el:
* etc/themes/tsdh-dark-theme.el: Add compilation-mode-line-fail,
compilation-mode-line-run, and compilation-mode-line-exit faces.

* etc/themes/manoj-dark-theme.el: Remove :family attributes.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-03  Chong Yidong  <cyd@gnu.org>
+
+	* progmodes/compile.el (compilation-mode-line-fail)
+	(compilation-mode-line-run, compilation-mode-line-exit): New
+	faces.
+	(compilation-start, compilation-handle-exit): Use them (Bug#11032).
+
 2012-06-03  Jack Duthen  <duthen.mac.01@gmail.com>  (tiny change)
 
 	* progmodes/which-func.el (which-func-update-ediff-windows): New
