--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,13 @@
+2012-06-03  Stefan Merten  <smerten@oekonux.de>
+
+	* textmodes/rst.el: Add comments.
+	(rst-transition, rst-adornment): New faces.
+	(rst-adornment-faces-alist): Make default safe to reevaluate.
+	Fixes
+	http://sourceforge.net/tracker/?func=detail&atid=422030&aid=3479603&group_id=38414.
+	Improve customization tags.
+	(rst-define-level-faces): Clarify meaning.
+
 2012-06-03  Chong Yidong  <cyd@gnu.org>
 
 	* progmodes/compile.el (compilation-mode-line-fail)
