--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-03  Ulrich Müller  <ulm@gentoo.org>
+
+	* configure.in (PAXCTL): Check for paxctl. (Bug#11398)
+
 2012-06-01  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Remove --disable-maintainer-mode option from 'configure'.  (Bug#11555)
