tool-bar-style doc fixes
* lisp/cus-start.el (tool-bar-style, tool-bar-max-label-size): Fix :version.

* src/xdisp.c (tool-bar-style): Doc fix.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-03  Glenn Morris  <rgm@gnu.org>
+
+	* xdisp.c (tool-bar-style): Doc fix.
+
 2012-06-03  Ulrich Müller  <ulm@gentoo.org>
 
 	* Makefile.in (PAXCTL): Define.
