--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-03  Glenn Morris  <rgm@gnu.org>
+
+	* cus-start.el (tool-bar-style, tool-bar-max-label-size):
+	Fix :version.
+
 2012-06-03  Stefan Merten  <smerten@oekonux.de>
 
 	* textmodes/rst.el: Add comments.
