Remove lib-src/rcs-checkin
This script isn't used by Emacs, and I can't imagine anyone else is
using it any more either...  From the commentary:
"This script is intended to be used to convert files with an
old-Emacs-style version history for use with VC (the Emacs 19
version-control interface), which likes to use RCS as its back end."

* lib-src/rcs-checkin: Remove file.
* lib-src/Makefile.in (INSTALLABLE_SCRIPTS, STAMP_INST_SCRIPTS):
Remove rcs-checkin.
(stamp-rcs-checkin): Remove.

* INSTALL, make-dist: Remove rcs-checkin.

* admin/quick-install-emacs (PUBLIC_LIBSRC_SCRIPTS): Remove rcs-checkin.

* doc/man/rcs-checkin.1: Remove.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-03  Glenn Morris  <rgm@gnu.org>
+
+	* INSTALL, make-dist: Remove rcs-checkin.
+
 2012-06-03  Ulrich Müller  <ulm@gentoo.org>
 
 	* configure.in (PAXCTL): Check for paxctl. (Bug#11398)
