--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-06-04  Chong Yidong  <cyd@gnu.org>
+
+	* image.el (imagemagick-types-inhibit): Revert last change.  Add
+	INFO and M.
+	(imagemagick-enabled-types): Remove EPS and related formats.
+
 2012-06-04  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/cl-lib.el: Rename from cl.el.
