--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,9 @@
+2012-06-04  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* PROBLEMS (68000 C compiler problems): Remove obsolete section.
+	Not only are the compilers long-dead, the obsolete advice
+	typically doesn't apply to current Emacs sources.
+
 2012-06-03  Chong Yidong  <cyd@gnu.org>
 
 	* themes/wheatgrass-theme.el:
