--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-05  Sam Steingold  <sds@gnu.org>
+
+	* calendar/calendar.el (calendar-exit): reinstate the 2012-03-28
+	patch (Bug#11140).
+
 2012-06-05  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-list/cust-print.el: Move to obsolete.
